--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+  background: #8bca84;
+  color: #23202a;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+}
+a{
+  max-height: 100px;
+  min-width: 60px;
+  
+  border-top: solid;
+  border-right: solid;
+  padding: 5px;
+  color:  #1d1e1f;
+}
+.pageContent{
+  
+  padding: 5px;
+  max-width: 900px;
+  min-height: 900px;
+  min-width: 500px;
+  margin: 5px auto;
+}
+.content{
+  padding: 5px;
+  min-height: 900px;
+  background-color: #f5f8f1
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.submitButton{
+  border: solid;
+  
+  padding: 1px;
+  margin: 10px;
+  color:  #1d1e1f;
 }
